src/components/ScheduleView.css
.fight-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
}

@media screen and (max-width: 500px) {
  .fight-cards {
    width: 80%;
  }
  img {
    width:80%;
    height:90%;
  }
}

.fight-cards {
  margin: 30px;
  padding: 10px;
  /* display: flex; */
  justify-content: center;
  /* flex-direction: column; */
  border: solid black 1px;
  box-shadow: 5px 10px 15px black;
}


.boxers {
  display:flex;
  flex-direction: row;
  border-bottom: solid black 1px;
}

.boxer-data {
  display:flex;
  flex-direction: column;
  align-items:center;
}

.versus {
  display:flex;
  align-items:center;
  margin:5px;
}

.loading-text {
  text-align:center;
  margin-top: 25%;
  font-size:xx-large;
  font-weight:bolder;
}

